<resources>
    <string name="app_name">getTaxi</string>
    <string name="buttonAdd">Adding a new drive</string>
    <string name="textView">Welcome! Please enter your drive details.</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="startPoint">Starting point</string>
    <string name="endPoint">Ending point</string>
    <string name="startTime">Beginning time (hh:mm)</string>
    <string name="endTime">End time (hh:mm)</string>
    <string name="startActivity">start Activity</string>
    <string name="startButton">Enter here to start</string>
    <string name="welcomeTextView">Welcome to Get Taxi!!</string>
    <string name="there_is_no_need_to_fill">End time - There is no need to fill</string>
    <string name="error_phone_9_digits">The number phone must include 9 digits</string>
    <string name="successAddToFirebase">Your drive has been added successfully</string>
    <string name="ErrorAddToFireBase">Error add the drive</string>
    <string name="setStartTime">Set beginning time:</string>
    <string name="SetEndTime">Set end time:</string>
    <string name="whatNowToDo">What would you like to do now?</string>
    <string name="Add_another_drive">Add another drive</string>
    <string name="close">Close</string>
</resources>
